# zeitgeist

./: .gitignore  Cargo.toml  README.md  ZEITGEIST_SPEC.md  spec.md  zeitgeist.toml
src/: api.rs  backend.rs  codec.rs  config.rs  lib.rs  main.rs  peer.rs  planner.rs  runtime.rs  types.rs
tests/: INIT_GUIDE.md  distributed.pass.fozzy.json  example.fozzy.json  host.pass.fozzy.json  mesh.pass.fozzy.json  quic.pass.fozzy.json  quic_mtls.pass.fozzy.json  run.pass.fozzy.json  vllm.live.pass.fozzy.json
