[package]
name = "zeitgeist"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["json", "macros", "http2"] }
base64 = "0.22"
bytes = { version = "1.10", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
ed25519-dalek = "2.2"
futures-core = "0.3"
hex = "0.4"
quinn = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
rustls-pemfile = "2.2"
schemars = { version = "0.8", features = ["uuid1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["serde", "v4"] }

[dev-dependencies]
insta = { version = "1.43", features = ["json"] }
rcgen = "0.13"
